--- a/tile-activity/tile.html
+++ b/tile-activity/tile.html
@@ -9,6 +9,10 @@
     <!-- This is the Tile by Nehir layout activity -->
 
     <!-- 📌 Add the Bootstrap 5 CDN here when ready -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
+  </head>
     <!-- Example: <link href="..." rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css" />
     <link
@@ -32,10 +36,27 @@
 
       <!-- Starting state: just images, no Bootstrap grid yet -->
       <!-- You’ll turn these into responsive tiles during the demo -->
-      <img src="../assets/tile1.jpg" alt="Tile print 1" class="mb-3" />
-      <img src="../assets/tile2.jpg" alt="Tile print 2" class="mb-3" />
-      <img src="../assets/tile3.jpg" alt="Tile print 3" class="mb-3" />
-      <img src="../assets/tile4.jpg" alt="Tile print 4" class="mb-3" />
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img src="../assets/tile1.jpg" alt="Tile print 1" class="mb-3" />
+
+          </div>
+          <div class="col-12">
+            <img src="../assets/tile2.jpg" alt="Tile print 2" class="mb-3" />
+
+          </div>
+          <div class="col-12">
+            <img src="../assets/tile3.jpg" alt="Tile print 3" class="mb-3" />
+ 
+          </div>
+          <div class="col-12">
+            <img src="../assets/tile4.jpg" alt="Tile print 4" class="mb-3" />
+
+          </div>
+        </div>
+      </div>
+
 
       <!-- 💡 Later you'll:
          - Wrap these in Bootstrap grid classes
