--- a/tile-activity/tile.html
+++ b/tile-activity/tile.html
@@ -36,21 +36,21 @@
 
       <!-- Starting state: just images, no Bootstrap grid yet -->
       <!-- You’ll turn these into responsive tiles during the demo -->
-      <div class="container">
+      <div class="container text-center mb-5">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-md-6 mb-3">
             <img src="../assets/tile1.jpg" alt="Tile print 1" class="mb-3" />
 
           </div>
-          <div class="col-12">
+          <div class="col-12 col-md-6 mb-3">
             <img src="../assets/tile2.jpg" alt="Tile print 2" class="mb-3" />
 
           </div>
-          <div class="col-12">
+          <div class="col-12 col-md-6 mb-3">
             <img src="../assets/tile3.jpg" alt="Tile print 3" class="mb-3" />
  
           </div>
-          <div class="col-12">
+          <div class="col-12 col-md-6 mb-3">
             <img src="../assets/tile4.jpg" alt="Tile print 4" class="mb-3" />
 
           </div>
