Made each tile a card with hover effect

--- a/tile-activity/tile.html
+++ b/tile-activity/tile.html
@@ -34,25 +34,31 @@
         Tile by Nehir
       </h1>
 
-      <!-- Starting state: just images, no Bootstrap grid yet -->
-      <!-- You’ll turn these into responsive tiles during the demo -->
+      <!-- Bootstrap grid with each tile in its own card -->
       <div class="container text-center mb-5">
         <div class="row">
+          <!-- Each column contains a card for the tile -->
           <div class="col-12 col-md-6 mb-3">
-            <img src="../assets/tile1.jpg" alt="Tile print 1" class="mb-3" />
-
+            <!-- Card with hover effect -->
+            <div class="card tile-hover">
+              <!-- Responsive image inside the card -->
+              <img src="../assets/tile1.jpg" alt="Tile print 1" class="card-img-top img-fluid mb-3" />
+            </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <img src="../assets/tile2.jpg" alt="Tile print 2" class="mb-3" />
-
+            <div class="card tile-hover">
+              <img src="../assets/tile2.jpg" alt="Tile print 2" class="card-img-top img-fluid mb-3" />
+            </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <img src="../assets/tile3.jpg" alt="Tile print 3" class="mb-3" />
- 
+            <div class="card tile-hover">
+              <img src="../assets/tile3.jpg" alt="Tile print 3" class="card-img-top img-fluid mb-3" />
+            </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <img src="../assets/tile4.jpg" alt="Tile print 4" class="mb-3" />
-
+            <div class="card tile-hover">
+              <img src="../assets/tile4.jpg" alt="Tile print 4" class="card-img-top img-fluid mb-3" />
+            </div>
           </div>
         </div>
       </div>
