--- a/tile-activity/tile.html
+++ b/tile-activity/tile.html
@@ -36,28 +36,26 @@
 
       <!-- Bootstrap grid with each tile in its own card -->
       <div class="container text-center mb-5">
+        <!-- Use Bootstrap's row and col classes for a responsive grid layout -->
         <div class="row">
-          <!-- Each column contains a card for the tile -->
           <div class="col-12 col-md-6 mb-3">
-            <!-- Card with hover effect -->
-            <div class="card tile-hover">
-              <!-- Responsive image inside the card -->
-              <img src="../assets/tile1.jpg" alt="Tile print 1" class="card-img-top img-fluid mb-3" />
+            <div class="card tile-hover p-3 border-tile">
+              <img src="../assets/tile1.jpg" alt="Tile print 1" class="card-img-top img-fluid square-card-img" />
             </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover">
-              <img src="../assets/tile2.jpg" alt="Tile print 2" class="card-img-top img-fluid mb-3" />
+            <div class="card tile-hover p-3 border-tile">
+              <img src="../assets/tile2.jpg" alt="Tile print 2" class="card-img-top img-fluid square-card-img" />
             </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover">
-              <img src="../assets/tile3.jpg" alt="Tile print 3" class="card-img-top img-fluid mb-3" />
+            <div class="card tile-hover p-3 border-tile">
+              <img src="../assets/tile3.jpg" alt="Tile print 3" class="card-img-top img-fluid square-card-img" />
             </div>
           </div>
           <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover">
-              <img src="../assets/tile4.jpg" alt="Tile print 4" class="card-img-top img-fluid mb-3" />
+            <div class="card tile-hover p-3 border-tile">
+              <img src="../assets/tile4.jpg" alt="Tile print 4" class="card-img-top img-fluid square-card-img" />
             </div>
           </div>
         </div>
@@ -69,5 +67,7 @@
          - Add .img-fluid and .border-tile
          - Use AI to improve layout or spacing
     --></div>
+  </body>
+</html>
   </body>
 </html>
