--- a/tile-activity/tile.html
+++ b/tile-activity/tile.html
@@ -38,24 +38,34 @@
       <div class="container text-center mb-5">
         <!-- Use Bootstrap's row and col classes for a responsive grid layout -->
         <div class="row">
-          <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover p-3 border-tile">
+          <!-- 
+            col-12: 1 column on mobile
+            col-md-6: 2 columns on tablet (≥768px)
+            col-lg-3: 4 columns on desktop (≥992px)
+          -->
+          <div class="col-12 col-md-6 col-lg-3 mb-3">
+            <div class="card tile-hover p-3 border-tile card-clickable" style="position:relative; overflow:hidden;">
               <img src="../assets/tile1.jpg" alt="Tile print 1" class="card-img-top img-fluid square-card-img" />
+              <!-- Smiley/frown face container -->
+              <div class="smiley-face"></div>
             </div>
           </div>
-          <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover p-3 border-tile">
+          <div class="col-12 col-md-6 col-lg-3 mb-3">
+            <div class="card tile-hover p-3 border-tile card-clickable" style="position:relative; overflow:hidden;">
               <img src="../assets/tile2.jpg" alt="Tile print 2" class="card-img-top img-fluid square-card-img" />
+              <div class="smiley-face"></div>
             </div>
           </div>
-          <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover p-3 border-tile">
+          <div class="col-12 col-md-6 col-lg-3 mb-3">
+            <div class="card tile-hover p-3 border-tile card-clickable" style="position:relative; overflow:hidden;">
               <img src="../assets/tile3.jpg" alt="Tile print 3" class="card-img-top img-fluid square-card-img" />
+              <div class="smiley-face"></div>
             </div>
           </div>
-          <div class="col-12 col-md-6 mb-3">
-            <div class="card tile-hover p-3 border-tile">
+          <div class="col-12 col-md-6 col-lg-3 mb-3">
+            <div class="card tile-hover p-3 border-tile card-clickable" style="position:relative; overflow:hidden;">
               <img src="../assets/tile4.jpg" alt="Tile print 4" class="card-img-top img-fluid square-card-img" />
+              <div class="smiley-face"></div>
             </div>
           </div>
         </div>
@@ -67,7 +77,7 @@
          - Add .img-fluid and .border-tile
          - Use AI to improve layout or spacing
     --></div>
-  </body>
-</html>
+    <!-- Add this before the closing </body> tag -->
+    <script src="smiley.js"></script>
   </body>
 </html>
